tree-sitter-blox/test/corpus/Comments.txt
===========
Line comments
===========

# Line comment
def  # Line comment
empty  # Line comment
()  # Line comment
{ # Line comment
  # Line comment
} # Line comment
# Line comment

---

(source_file
  (comment)
  statement: (definition
    (comment)
    name: (identifier)
    (comment)
    (comment)
    body: (block
      (comment)
      (comment)))
  (comment)
  (comment))
