tree-sitter-blox/test/corpus/Function definitions.txt
==========
Function with empty body
==========

def empty() {
}

---

(source_file
  statement: (definition
    name: (identifier)
    body: (block)))


====================
Basic function definition
====================

def circle_area(r) {
    pi * r * r
}

---

(source_file
  statement: (definition
    name: (identifier)
    parameters: (function_parameters (identifier))
    body: (block
      statement: (expression_statement
        expression: (binary_expression
          lhs: (binary_expression
            lhs: (term (identifier))
            operator: (multiply)
            rhs: (term (identifier)))
          operator: (multiply)
          rhs: (term (identifier)))))))


=================
Multiple parameters
=================

def rectangle_area(l, w) {
    l * w
}

---

(source_file
  statement: (definition
    name: (identifier)
    parameters: (function_parameters
      (identifier)
      (identifier))
    body: (block
      statement: (expression_statement
       expression: (binary_expression
          lhs: (term (identifier))
          operator: (multiply)
          rhs: (term (identifier)))))))
