tree-sitter-blox/test/corpus/Literals.txt
=========
Numbers
=========

55

---

(source_file
  (expression_statement
    (term (literal (number)))))



========
Strings
========

"hello world"

---

(source_file
  (expression_statement
    (term (literal (string)))))
