tree-sitter-blox/test/corpus/Operators.txt
===============
Addition
===============

1 + a

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (add)
      rhs: (term (identifier)))))

===============
Subtraction
===============

1 - a

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (subtract)
      rhs: (term (identifier)))))

===============
Multiplication
===============

1 * a

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (multiply)
      rhs: (term (identifier)))))

===============
Division
===============

1 / a

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (divide)
      rhs: (term (identifier)))))

===============
Concatenate
===============

"hello" ++ " world"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (string)))
      operator: (concatenate)
      rhs: (term (literal (string))))))

===============
Equal
===============

1 == "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (equal)
      rhs: (term (literal (string))))))

===============
Not equal
===============

1 != "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (not_equal)
      rhs: (term (literal (string))))))

===============
Less than
===============

1 < "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (less_than)
      rhs: (term (literal (string))))))

===============
Less than or equal
===============

1 <= "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (less_or_equal)
      rhs: (term (literal (string))))))

===============
Greater than
===============

1 > "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (greater_than)
      rhs: (term (literal (string))))))

=================
Greater than or equal
=================

1 >= "foo"

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (literal (number)))
      operator: (greater_or_equal)
      rhs: (term (literal (string))))))

===============
Assignment (simple)
===============

x = 1

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (identifier))
      operator: (assignment)
      rhs: (term (literal (number))))))

======================
Assignment (object property)
======================

foo.bar = 55

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (object_index
        base: (term (identifier))
        index: (identifier)))
      operator: (assignment)
      rhs: (term (literal (number))))))

======================
Append to array
======================

array << value

---

(source_file
  statement: (expression_statement
    expression: (binary_expression
      lhs: (term (identifier))
      operator: (append)
      rhs: (term (identifier)))))
